--- a/eventify_front_end/src/styles/Navbar.css
+++ b/eventify_front_end/src/styles/Navbar.css
@@ -4,8 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  /* background: linear-gradient(135deg, #53585f, #282d3a); */
-  background-color: #4e75f4;
+  background: linear-gradient(135deg, #53585f, #282d3a);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   height: 56px;
   position: relative;
